kubernetes/base/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: github-registry-secret
      containers:
        - name: backend
          image: ghcr.io/aokiapp/plasmic-k8s/backend:latest
          ports:
            - containerPort: 3004
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3004
            initialDelaySeconds: 3
            periodSeconds: 10
---

---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3004
  type: ClusterIP

---
