kubernetes/base/codegen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codegen
  labels:
    app: codegen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codegen
  template:
    metadata:
      labels:
        app: codegen
    spec:
      imagePullSecrets:
        - name: github-registry-secret
      containers:
        - name: codegen
          image: ghcr.io/aokiapp/plasmic-k8s/codegen:latest
          ports:
            - containerPort: 3004
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3004
            initialDelaySeconds: 3
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: codegen
spec:
  selector:
    app: codegen
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3004
  type: ClusterIP

---
