kubernetes/base/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: github-registry-secret
      containers:
        - name: frontend
          image: ghcr.io/aokiapp/plasmic-k8s/frontend:latest
          ports:
            - containerPort: 80
          # mount volumes as /app/build for read to get build output
          volumeMounts:
            - name: frontend-build
              mountPath: /app/build
      # define transient volume to share build output between init and main container
      volumes:
        - name: frontend-build
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
